samples/_failures_safe/1761730352_e72091_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4713566.c:168: error: expected ‘;’, ‘,’ or ‘)’ at end of input
